directory-search input dark mode fix

--- a/j-Directory/component.css
+++ b/j-Directory/component.css
@@ -20,7 +20,7 @@
 .ui-dark .ui-directory-search { background: #303030; }
 .ui-dark .ui-directory li { background-color: #303030; border-color: #404040; }
 .ui-dark .ui-directory-search { border-bottom-color: #404040; }
-.ui-dark .ui-directory-search input { background-color: #303030; }
+.ui-dark .ui-directory-search input { background-color: #303030; color: white; }
 .ui-dark .ui-directory-add:hover { color: white; }
 .ui-dark .ui-directory .current { background-color: #303030; color: white; }
 .ui-dark .ui-directory .selected { background-color: #404040; color: white; }
